# drhagen.com

./: 404.html  LICENSE  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
blog/: index.html
blog/comparison-of-iteration-styles-in-programming/: index.html
blog/difficulty-of-pattern-matching-syntax/: index.html
blog/excellent-error-messages/: index.html
blog/finally-a-synthetic-organism-that-worries-me/: index.html
blog/free-star-wars-for-everyone/: index.html
blog/leap-years-something-the-gregorian-calendar-gets-right/: index.html
blog/marginal-vs-conditional-subtyping/: index.html
blog/multidimensional-pairing-functions/: index.html
blog/one-bad-naming-fad/: index.html
blog/one-sided-debate-over-sequence-syntax/: index.html
blog/ready-for-a-national-id/: index.html
blog/sane-equality/: index.html
blog/stochasticity-incompatible-with-optimization/: index.html
blog/superior-pairing-function/: index.html
blog/the-electoral-jury/: index.html
blog/the-missing-11th-of-the-month/: index.html
blog/the-missing-23rd-of-the-month/: index.html
blog/the-phase-of-the-day-something-else-the-gregorian-calendar-gets-right/: index.html
blog/the-phase-of-the-year-something-the-gregorian-calendar-gets-very-wrong/: index.html
blog/the-sanctification-button/: index.html
blog/the-sort-within-groups-problem/: index.html
cv/: index.html
docs/: CNAME  cv.md  index.md  software.md
search/: search_index.json
software/: index.html
(+50 files in other folders)
