[tool.poetry]
name = "drhagen.com"
version = "0.0.0"
description = ""
authors = ["David Hagen <david@drhagen.com>"]
license = "CC-BY"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
mkdocs-material = "^9"
mkdocs-rss-plugin = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
