[project]
name = "drhagen.com"
version = "0.0.0"
description = ""
authors = [
    {name = "David Hagen", email = "david@drhagen.com"}
]
license = "CC-BY-4.0"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "mkdocs-material == 9.*",
    "mkdocs-rss-plugin == 1.*",
]

[tool.uv]
python-preference = "only-managed"
